--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-time-ago": "^7.2.1",
     "swiper": "^9.2.0",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
